# wsi-evolutionary-algorithm

./: benchmark.py  evolution.py  main.py  pyproject.toml
docs/: cw2.html  sprawozdanie.md
