[tool.poetry]
name = "02-algorytmy-ewolucyjne"
version = "0.1.0"
description = ""
authors = ["mgarbowski <mikolaj.garbowski@gmail.com>"]
readme = "README.md"
packages = [{include = "02_algorytmy_ewolucyjne"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
